<resources>

    <string name="app_name">Mithril Play</string>

    <string name="set_usage_data_access">Set usage data access</string>
    <string name="usage_data_access_desc">Hello,\nYou need \'Usage data access\' settings to use Mithril play.. Click on the Settings button below, select Mithril Play and turn on \'Allow usage tracking\'.</string>
    <string name="usage_data_access">USAGE DATA ACCESS</string>
    <string name="confirm">OK</string>
    <string name="cancel">Cancel</string>
    <string name="today_reward">Today rewards</string>
    <string name="reward_history">Rewards history</string>
    <string name="permission_desc">Mithril Play requires you to agree to the following permissions before you can use it.</string>
    <string name="agree">Agree</string>
    <string name="verify_email">Verify email address</string>
    <string name="verify_email_desc">An authentication message has been sent to the email address you entered.\nPlease check your message in your mailbox and click on the Confirm Authentication button to complete your subscription.\n\nIf you do not receive the verification email, please resend the verification email.</string>
    <string name="verify_email_resend">Resend verification email</string>
    <string name="verify_ok">Authentication confirmation</string>
    <string name="verify_fail">E-mail verification is not complete.</string>
    <string name="congrats">Congratulations</string>
    <string name="bonus">Bonus Reward payment complete!</string>
    <string name="login_go">Log in</string>
    <string name="signup_ok_desc">You have joined the Mithril Play\nEnter profile information and get a bonus rewards.\n\nIf you do not want to do this now, you can do it later.</string>
    <string name="more_info">Enter additional information</string>
    <string name="more_info_btn">Enter your profile information\nGet 1000 MTP rewards.</string>
    <string name="setting_mtp">%s MTP</string>
    <string name="more_info_set">%s / %s.%s / %s</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="start">Start</string>
    <string name="init_info_ing">Preferences are in progress.\nPlease wait.</string>
    <string name="init_info_ok">Finished.\nStart now!.</string>
    <string name="password">Password</string>
    <string name="password_null">Please enter your password</string>
    <string name="password_info">8-20 characters, 1 or more capital letters, 1 or more special symbols (&#33;,&#64;,&#35;,&#36;), including numbers</string>
    <string name="email">E-Mail</string>
    <string name="email_null">Please enter your e-mail</string>
    <string name="sign_in">Log in</string>
    <string name="new_account_desc">Do not have an account? Join now</string>
    <string name="sign_up">Sign up</string>
    <string name="member_join">Sign up</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="birth_year">Year of birth</string>
    <string name="month">Month</string>
    <string name="nation_sel">Country</string>
    <string name="more_info_desc">The information you entered cannot be modified. Please enter carefully.\nAnd rest assured. This information is encrypted and wrote on the block chain, and can only be verified by the user.</string>
    <string name="more_info_reward">Input complete and receive rewards</string>
    <string name="today_reward_remain">Today\'s reward is %s remained.</string>
    <string name="today_reward_end">You received all of today\'s rewards.</string>
    <string name="reward_detail">Reward details</string>
    <string name="reward_detail_comment_game">%s\n%s MTP Payment Completion  \n Total %s play</string>
    <string name="reward_detail_comment_info">%s\n%s MTP Payment Completion </string>
    <string name="get_reward_ready">Play more than %s minute!</string>
    <string name="get_reward_ok">%s Received MTP.</string>
    <string name="get_reward">100 Get MTP</string>
    <string name="not_install_game">No games installed.</string>
    <string name="not_play_game">No games played today.</string>
    <string name="not_reward_list">No reward received.</string>
    <string name="total_mtp">%s MTP</string>
    <string name="welcome_slide1_title">Earn a cryptocurrency daily</string>
    <string name="welcome_slide1_desc">Enjoy the game and visit the Mithril Play app.\nYou can earn a Mithril token, which is a cryptocurrency every day.</string>
    <string name="welcome_slide2_title">Usage of Mithril Tokens</string>
    <string name="welcome_slide2_desc">When the mithril play official service is launched, gamers can cash out Mithril tokens in an external exchange platform or you can participate in game crowdfunding in the App.\n(More usage will be available further.)</string>
    <string name="welcome_slide3_title">Block Chain Gamer Resume</string>
    <string name="welcome_slide3_desc">When you delete a game, all of your time and record of the game will disappear. Mithril play keeps the gamer\'s record in a blockchain. The more record updated, the more invitations from game companies with the special gift will be sent to you.</string>
    <string name="setting">Setting</string>
    <string name="setting_profile_title">MITHRIL PLAY Account</string>
    <string name="sign_out">Log out</string>
    <string name="total_reward">Total Reward</string>
    <string name="empty_today_txt">You don\'t have the records to play today. \nPlay any game on your phone! \nYou can get 1 reward from 1 game, so you can get 3 rewards when you play 3 games maximum a day.</string>
    <string name="empty_reward_history_txt">You don\'t have any rewards yet. \nYou play any game on your phone \nand can get your first reward today.</string>
    <string name="email_not_valid">Email format is incorrect.</string>
    <string name="reward_userinfo_add">Reward for additional information</string>
    <string name="password_check">The password format is incorrect.</string>
    <string name="hours">h</string>
    <string name="minutes">m</string>
    <string name="seconds">s</string>
    <string name="logout_comment">Unsaved information may be deleted when logging out.\nDo you want to log out?</string>

    <!-- alert -->
    <string name="alert_more_info_empty">Please select all profile information and try again.</string>
    <string name="is_rooting_app_end">Your phone has been rooting.\nThere is a risk of personal information leakage, so Mithril Play will be terminated.</string>

    <!-- image desc -->
    <string name="mithril_logo">Mithril Logo</string>
    <string name="empty_reward_history">No reward records.</string>
    <string name="empty_today_reward">There is no game play record of today.</string>
    <string name="today_reward_check">Show today\'s reward</string>
    <string name="permission_check">Permission consent check</string>
    <string name="reward_ok_check">Successful receiving rewards </string>
    <string name="game_icon">Game Icon</string>

</resources>
