<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    tools:context="io.mithrilcoin.mithrilplay.SignupOkActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:padding="24dp"
            android:textSize="32sp"
            android:textStyle="bold"
            android:textColor="@color/colorWhite"
            android:text="@string/congrats"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="24dp"
            android:textSize="16sp"
            android:textColor="@color/colorWhite"
            android:text="@string/signup_ok_desc"/>
    </LinearLayout>

    <Button
        android:id="@+id/btn_skip"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="16dp"
        android:background="@android:color/transparent"
        android:textSize="14sp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="16dp"
        android:textColor="@color/colorWhite"
        android:text="@string/skip" />

    <Button
        android:id="@+id/btn_more_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/btn_skip"
        android:background="@drawable/bg_white_r4"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:textColor="@color/colorPrimary"
        android:text="@string/more_info" />

</RelativeLayout>
