<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorLightGray">

    <Button
        android:id="@+id/btn_set_data_access"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:background="@drawable/bg_blue_r4"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_margin="24dp"
        android:textColor="@color/colorWhite"
        android:text="@string/set_usage_data_access" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:padding="32dp"
        android:lineSpacingMultiplier="1.2"
        android:text="@string/usage_data_access_desc"
        android:textColor="@color/colorPrimary" />

    <RelativeLayout
        android:layout_width="240dp"
        android:layout_height="222dp"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/btn_set_data_access"
        android:background="@drawable/data_access_info_img">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorDarkGray"
            android:layout_marginStart="40dp"
            android:layout_marginTop="53dp"
            android:textSize="12sp"
            android:text="@string/usage_data_access"/>

    </RelativeLayout>

</RelativeLayout>
