<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="io.mithrilcoin.mithrilplay.view.auth.LoginActivity">

    <ImageView
        android:layout_width="240dp"
        android:layout_height="240dp"
        android:layout_alignParentEnd="true"
        android:src="@drawable/ic_login_logo"
        android:contentDescription="@string/mithril_logo"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="208dp"
            android:layout_height="50dp"
            android:scaleType="fitXY"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="40dp"
            android:src="@drawable/ic_mithrilplay_logo"
            android:contentDescription="@string/mithril_logo"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_user_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/iv_logo"
            android:paddingStart="24dp"
            android:paddingEnd="24dp"
            app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout"
            android:textColorHint="@color/colorWhiteOp30">
            <EditText
                android:id="@+id/et_user_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:textColor="@color/colorWhite" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_pw_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/til_user_id"
            android:layout_marginTop="8dp"
            android:paddingStart="24dp"
            android:paddingEnd="24dp"
            app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout"
            android:textColorHint="@color/colorWhiteOp30">
            <EditText
                android:id="@+id/et_user_pw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textColor="@color/colorWhite" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btn_signin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/til_pw_id"
            android:background="@drawable/bg_white_r4"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginTop="16dp"
            android:textColor="@color/colorPrimary"
            android:text="@string/sign_in" />

        <Button
            android:id="@+id/btn_signup"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@id/btn_signin"
            android:background="@android:color/transparent"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginTop="16dp"
            android:textColor="@color/colorWhite"
            android:textSize="14sp"
            android:text="@string/new_account_desc" />
    </RelativeLayout>
</RelativeLayout>
