<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="io.mithrilcoin.mithrilplay.view.VerifyEmailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:padding="24dp"
            android:textSize="32sp"
            android:textStyle="bold"
            android:textColor="@color/colorWhite"
            android:text="@string/verify_email"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="24dp"
            android:textSize="16sp"
            android:textColor="@color/colorWhite"
            android:text="@string/verify_email_desc"/>

        <Button
            android:id="@+id/btn_resend_email"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/bg_border_bottom_white"
            android:textSize="14sp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:textColor="@color/colorWhite"
            android:text="@string/verify_email_resend" />
    </LinearLayout>



    <Button
        android:id="@+id/btn_verify_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:background="@drawable/bg_white_r4"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_margin="24dp"
        android:textColor="@color/colorPrimary"
        android:text="인증 완료" />

</RelativeLayout>
