<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimaryDark"
    tools:context="io.mithrilcoin.mithrilplay.MoreInfoActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <include
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            layout="@layout/toolbar"/>

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/bg_white_toggle"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_toggle_male"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="?android:attr/buttonBarButtonStyle"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/colorWhite"
            android:text="@string/male" />

        <Button
            android:id="@+id/btn_toggle_female"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="?android:attr/buttonBarButtonStyle"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/colorWhite"
            android:text="@string/female" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:orientation="horizontal">

        <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/sp_birth_year"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_weight="1"
            style="@style/Base.Widget.AppCompat.Spinner.Underlined"/>

        <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/sp_birth_month"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_weight="2"
            style="@style/Base.Widget.AppCompat.Spinner.Underlined"/>

    </LinearLayout>

    <android.support.v7.widget.AppCompatSpinner
        android:id="@+id/sp_nation"
        android:layout_width="match_parent"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_height="56dp"
        style="@style/Base.Widget.AppCompat.Spinner.Underlined"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:text="@string/more_info_desc"/>

    <Button
        android:id="@+id/btn_get_bonus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_white_r4"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:textColor="@color/colorPrimary"
        android:text="@string/more_info_reward" />

</LinearLayout>
